commit for folder moved pictures

--- a/landing-index.html
+++ b/landing-index.html
@@ -26,7 +26,7 @@
     <div class="links"> 
         <div class="card">
             <div class="pictures">
-                <img src="Goat Image.jpg" alt="logo" class="image">
+                <img src="assets/Goat Image.jpg" alt="logo" class="image">
             </div>
             <div class="container">
                 <h4><b>Backcountry.com</b></h4> 
@@ -36,7 +36,7 @@
         </div>
         <div class="card">
                 <div class="pictures">
-                    <img src="1973 alfa.jpg" alt="alfa romeo" class="image">
+                    <img src="assets/1973 alfa.jpg" alt="alfa romeo" class="image">
                 </div>
                 <div class="container">
                     <h4><b>Petrolicious</b></h4> 
@@ -46,7 +46,7 @@
         </div>
         <div class="card">
                 <div class="pictures">
-                    <img src="uncrate_logo.png" alt="logo" class="image">
+                    <img src="assets/uncrate_logo.png" alt="logo" class="image">
                 </div>
                 <div class="container">  
                     <h4><b>Uncrate.com</b></h4> 
@@ -56,7 +56,7 @@
         </div>
         <div class="card">
                 <div class="pictures">
-                    <img src="revzilla_adv.jpg" alt="motorcycle" class="image">
+                    <img src="assets/revzilla_adv.jpg" alt="motorcycle" class="image">
                 </div>
                 <div class="container">
                     <h4><b>Revzilla.com</b></h4> 
